Fix bug: Side bar content is stretched when adding more content to main-content section

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
 .container {
    display: grid; 
    grid-template-columns: 1fr 3fr;
+   grid-template-rows: 210px max-content;
    row-gap: 5px;
 }
 
@@ -14,6 +15,7 @@ body {
     background-color: #0ea5e9;
     grid-row: 1 / 3;
     display: grid;
+    grid-template-rows: max-content max-content max-content;
     row-gap: 50px;
     padding: 20px;
 }
